force-app/main/default/objects/ConfigurationDrift__e/ConfigurationDrift__e.object-meta.xml
<CustomObject>
    <label>Configuration Drift</label>
    <pluralLabel>Configuration Drift Events</pluralLabel>
</CustomObject>