force-app/main/default/objects/ConfigurationDrift__e/fields/Changed_Object__c.field-meta.xml
<CustomField>
    <fullName>Changed_Object__c</fullName>
    <label>Changed Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>