force-app/main/default/objects/ConfigurationDrift__e/fields/Detection_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Detection_Timestamp__c</fullName>
    <label>Detection Timestamp</label>
    <type>DateTime</type>
</CustomField>