force-app/main/default/objects/ConfigurationDrift__e/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>